--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,go
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,go
+# Created by https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,database
+# Edit at https://www.toptal.com/developers/gitignore?templates=go,visualstudiocode,database
+
+### Database ###
+*.accdb
+*.db
+*.dbf
+*.mdb
+*.pdb
+*.sqlite3
+*.db-shm
+*.db-wal
 
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
@@ -43,4 +53,4 @@ go.work
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,go
+# End of https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,database
